# Project4

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: Init.cpp  Init.hpp  UserSettings.cpp  UserSettings.hpp  main.cpp  misc.cpp  misc.hpp
src/cpp/database/: CafeDatabase.cpp  CafeDatabase.hpp  Customer.hpp  Date.cpp  Date.hpp  Ingredient.hpp  SQLDatabase.cpp  SQLDatabase.hpp
src/cpp/sys/: fileaccess.cpp  fileaccess.hpp  systemcall.cpp  systemcall.hpp
src/cpp/terminal/: HomePage.cpp  HomePage.hpp  InventoryPage.cpp  InventoryPage.hpp  Login.cpp  Login.hpp  OwnerPage.cpp  OwnerPage.hpp  RegisterPage.cpp  RegisterPage.hpp  Terminal.cpp  Terminal.hpp
src/sql/: add_procedures.sql  cafe_db.sql  cafe_queries.sql  procedures.sql  query_procedures.sql  remove_procedures.sql
src/sql/Initialization/: cafe_add_init_items.sql  cafe_db.sql  template_db.sql
src/sql/Queries/: cafe_queries.sql  template_verify.sql
src/sql/Tools/: add_ingredient.sql  add_menuitem.sql  procedures.sql
